manager/config/network-policies/authorization.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: connector-ingress-security
spec:
  podSelector:
    matchLabels:
      m4d.ibm.com/componentType: connector
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector: {}
