manager/config/network-policies/connectors-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: connector-ingress-security
  namespace: system
spec:
  podSelector:
    matchLabels:
      m4d.ibm.com/componentType: connector
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector: {}
